--- a/springboot-blog-rest-api/src/main/resources/application.properties
+++ b/springboot-blog-rest-api/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name= danish
+spring.security.user.password=danish
+spring.security.user.roles=ADMIN
