--- a/springboot-blog-rest-api/pom.xml
+++ b/springboot-blog-rest-api/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
